[gd_scene load_steps=39 format=2]

[ext_resource path="res://font/Silver.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/main_menu_button.gd" type="Script" id=2]
[ext_resource path="res://script/main_opntion.gd" type="Script" id=3]
[ext_resource path="res://custom_style/button_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://custom_style/button_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://custom_style/negative_button_theme.tres" type="Theme" id=6]
[ext_resource path="res://custom_style/tab_panel.tres" type="StyleBox" id=7]
[ext_resource path="res://custom_style/button_theme.tres" type="Theme" id=8]
[ext_resource path="res://script/key_binding.gd" type="Script" id=9]
[ext_resource path="res://custom_style/tab_fg.tres" type="StyleBox" id=10]
[ext_resource path="res://custom_style/tag_bg.tres" type="StyleBox" id=11]
[ext_resource path="res://font/gyunggicheonnyunjemok_Bold.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_top = 10.0
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0.639216, 0.796078, 0.87451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_top = 5.0
expand_margin_bottom = 20.0
shadow_size = 1
shadow_offset = Vector2( 5, 5 )
anti_aliasing = false

[sub_resource type="Theme" id=4]
PopupMenu/colors/font_color = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 1, 1, 1, 1 )
PopupMenu/constants/hseparation = 0
PopupMenu/constants/vseparation = 10
PopupMenu/fonts/font = SubResource( 2 )
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = ExtResource( 4 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 3 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.164706, 0.121569, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0.639216, 0.796078, 0.87451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_offset = Vector2( 5, 5 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.164706, 0.156863, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2( 5, 5 )
anti_aliasing = false

[sub_resource type="ProxyTexture" id=9]

[sub_resource type="ProxyTexture" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0.639216, 0.796078, 0.87451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_offset = Vector2( 5, 5 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.164706, 0.156863, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2( 5, 5 )
anti_aliasing = false

[sub_resource type="ProxyTexture" id=15]

[sub_resource type="ProxyTexture" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="DynamicFont" id=19]
size = 20
extra_spacing_top = 5
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0.639216, 0.796078, 0.87451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_offset = Vector2( 5, 5 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.164706, 0.156863, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_offset = Vector2( 5, 5 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=22]
size = 30
extra_spacing_bottom = -10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=23]
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="DynamicFont" id=24]
size = 30
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="DynamicFont" id=26]
size = 30
extra_spacing_bottom = -10
font_data = ExtResource( 1 )

[node name="main_option" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgrounds" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="Control/backgrounds"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.839216, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="letter1" type="ColorRect" parent="Control/backgrounds"]
anchor_right = 1.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="letter2" type="ColorRect" parent="Control/backgrounds"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
rect_min_size = Vector2( 0, 100 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.97
margin_top = -190.5
margin_right = -27.97
margin_bottom = 190.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "화면 크기
효과음
배경음
화면 흔들기
언어
키 설정
크레딧
데이터 초기화"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option_menus" type="VBoxContainer" parent="Control/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -193.0
margin_right = 250.0
margin_bottom = 177.0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screen_size" type="OptionButton" parent="Control/Control/option_menus"]
margin_top = 3.0
margin_right = 260.0
margin_bottom = 38.0
theme = SubResource( 4 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1920 x 1080"
align = 1
items = [ "1920 x 1080", null, false, 0, null, "1600 x 900", null, false, 1, null, "1280 x 720", null, false, 2, null, "640 x 360", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_bar" type="ProgressBar" parent="Control/Control/option_menus"]
margin_top = 50.0
margin_right = 260.0
margin_bottom = 85.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
custom_colors/font_color = Color( 0, 0.517647, 0.745098, 1 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Control/Control/option_menus/sfx_bar"]
margin_right = 250.0
margin_bottom = 30.0
custom_icons/grabber_highlight = SubResource( 9 )
custom_icons/grabber = SubResource( 10 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area = SubResource( 12 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgm_bar" type="ProgressBar" parent="Control/Control/option_menus"]
margin_top = 97.0
margin_right = 260.0
margin_bottom = 132.0
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
custom_colors/font_color = Color( 0, 0.517647, 0.745098, 1 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Control/Control/option_menus/bgm_bar"]
margin_right = 250.0
margin_bottom = 30.0
custom_icons/grabber_highlight = SubResource( 15 )
custom_icons/grabber = SubResource( 16 )
custom_styles/slider = SubResource( 17 )
custom_styles/grabber_area = SubResource( 18 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screen_shake" type="Panel" parent="Control/Control/option_menus"]
margin_top = 144.0
margin_right = 260.0
margin_bottom = 179.0
rect_min_size = Vector2( 247, 35 )
custom_styles/panel = ExtResource( 7 )

[node name="screen_shake" type="Tabs" parent="Control/Control/option_menus/screen_shake"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.5
margin_top = -18.5
margin_right = 123.5
margin_bottom = 19.5
custom_styles/tab_fg = ExtResource( 10 )
custom_styles/tab_disabled = ExtResource( 11 )
custom_styles/tab_bg = ExtResource( 11 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color_fg = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="language_select" type="Panel" parent="Control/Control/option_menus"]
margin_top = 191.0
margin_right = 260.0
margin_bottom = 226.0
rect_min_size = Vector2( 247, 35 )
custom_styles/panel = ExtResource( 7 )

[node name="language_select" type="Tabs" parent="Control/Control/option_menus/language_select"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.5
margin_top = -19.0
margin_right = 123.5
margin_bottom = 19.0
custom_styles/tab_fg = SubResource( 20 )
custom_styles/tab_disabled = ExtResource( 11 )
custom_styles/tab_bg = SubResource( 21 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color_fg = Color( 0, 0, 0, 1 )
scrolling_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="key_setting" type="Button" parent="Control/Control/option_menus"]
margin_top = 238.0
margin_right = 260.0
margin_bottom = 273.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "Key_setting"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credit" type="Button" parent="Control/Control/option_menus"]
margin_top = 285.0
margin_right = 260.0
margin_bottom = 320.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Credit"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="data_reset" type="Button" parent="Control/Control/option_menus"]
margin_top = 332.0
margin_right = 260.0
margin_bottom = 367.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "Data Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="Control/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.216
margin_top = -182.435
margin_right = -14.2158
margin_bottom = -112.435
rect_min_size = Vector2( 150, 70 )
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 22 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "돌아가기"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screen_tween" type="Tween" parent="Control/Control"]

[node name="key_binding" type="Popup" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/key_binding"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/key_binding"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control/key_binding"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -491.0
margin_top = -276.0
margin_right = 491.0
margin_bottom = 276.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move" type="VBoxContainer" parent="Control/key_binding/Control"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -103.5
margin_right = 103.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/key_binding/Control/move"]
margin_right = 207.0
margin_bottom = 73.0
text = "【이동】
----------------------"
align = 1
valign = 1

[node name="action_info" type="HBoxContainer" parent="Control/key_binding/Control/move"]
margin_top = 77.0
margin_right = 207.0
margin_bottom = 112.0
custom_constants/separation = 10

[node name="action_name" type="Label" parent="Control/key_binding/Control/move/action_info"]
margin_right = 57.0
margin_bottom = 35.0
text = "액션 이름"
align = 1
valign = 1

[node name="binding_button" type="Button" parent="Control/key_binding/Control/move/action_info"]
margin_left = 67.0
margin_right = 207.0
margin_bottom = 35.0
rect_min_size = Vector2( 140, 0 )
theme = ExtResource( 8 )
text = "키 이름"

[node name="credit_popup" type="Popup" parent="Control"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/credit_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/credit_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.0
margin_top = -31.5
margin_right = 185.0
margin_bottom = 31.5
custom_fonts/font = SubResource( 24 )
text = "개발 : YHY_games
사용 엔진 : GODOT ENGINE"

[node name="credit_close" type="Button" parent="Control/credit_popup"]
margin_left = 1100.0
margin_top = 538.0
margin_right = 1250.0
margin_bottom = 608.0
rect_min_size = Vector2( 150, 70 )
theme = ExtResource( 6 )
custom_styles/focus = SubResource( 25 )
custom_fonts/font = SubResource( 26 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "돌아가기"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="Control/Control/option_menus/screen_size" to="." method="screen_size_item_selected"]
[connection signal="value_changed" from="Control/Control/option_menus/sfx_bar/HSlider" to="." method="sfx_bar_value_changed"]
[connection signal="value_changed" from="Control/Control/option_menus/bgm_bar/HSlider" to="." method="bgm_bar_value_changed"]
[connection signal="tab_changed" from="Control/Control/option_menus/screen_shake/screen_shake" to="." method="shake_tab_changed"]
[connection signal="tab_changed" from="Control/Control/option_menus/language_select/language_select" to="." method="select_tab_changed"]
[connection signal="button_event" from="Control/Control/option_menus/key_setting" to="." method="button_event"]
[connection signal="button_up" from="Control/Control/option_menus/key_setting" to="Control/Control/option_menus/key_setting" method="button_up"]
[connection signal="button_event" from="Control/Control/option_menus/credit" to="." method="button_event"]
[connection signal="button_up" from="Control/Control/option_menus/credit" to="Control/Control/option_menus/credit" method="button_up"]
[connection signal="button_event" from="Control/Control/cancel" to="." method="button_event"]
[connection signal="button_up" from="Control/Control/cancel" to="Control/Control/cancel" method="button_up"]
[connection signal="button_event" from="Control/credit_popup/credit_close" to="." method="button_event"]
[connection signal="button_up" from="Control/credit_popup/credit_close" to="Control/credit_popup/credit_close" method="button_up"]
